# pruebaDMA3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32H723ZGTX_FLASH.ld  STM32H723ZGTX_RAM.ld  requirements.txt  state_machine.json  template-project.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  compile-checks.yml
Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Inc/Code_generation/: Generator.py
Core/Inc/Code_generation/Packet_generation/: DataTemplate.hpp  OrderTemplate.hpp  Packet_descriptions.py  Packet_generation.py  ProtectionsTemplate.hpp
Core/Inc/Code_generation/State_machine_generation/: State_machine_description.py  State_machine_generation.py
Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c
Core/Src/Runes/: Pins.cpp  Runes.cpp  generated_metadata.cpp
Tests/: runner.py  test.py  utility.py
tools/: binary_metadata_template.cpp  create_look_up_table.cpp  generate_binary_metadata.py  retrieve_flash_data.py
